fix wrapped video

--- a/src/app/components/BrandHero/BrandHero.module.scss
+++ b/src/app/components/BrandHero/BrandHero.module.scss
@@ -15,7 +15,8 @@
     iframe,
     object,
     embed,
-    > div { 
+    > div,
+    video { 
         position: absolute;
         top: 0;
         left: 0;
