--- a/src/app/components/FlexibleContent/Tabs/Tabs.module.scss
+++ b/src/app/components/FlexibleContent/Tabs/Tabs.module.scss
@@ -46,7 +46,8 @@
     iframe,
     object,
     embed,
-    > div { 
+    > div,
+    video { 
         position: absolute;
         top: 0;
         left: 0;
